# tinygrad-tensor-puzzles

./: cspell.config.json  main.py  pyproject.toml
src/: puzzles.ipynb
