[project]
name = "tinygrad-tensor-puzzles"
version = "0.1.0"
description = "Solve puzzles to improve your tinygrad skills!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chalk-diagrams>=0.2.2",
    "hypothesis>=6.129.1",
    "numpy>=2.2.3",
    "tinygrad>=0.10.2",
]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "information"
reportUnknownVariableType = "information"
reportUnknownMemberType = "information"
reportUnknownArgumentType = "information"
reportPrivateImportUsage = "information"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipython>=9.0.2", "ruff>=0.9.10"]

[tool.uv.sources]
tinygrad = { git = "ssh://git@github.com/tinygrad/tinygrad" }
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true
